spacing on homepage fixed

--- a/api/static/_index.scss
+++ b/api/static/_index.scss
@@ -19,6 +19,10 @@
 
 }
 
+.all-the-buttons {
+  padding-top: 1.2em;
+}
+
 // .divider {
 //
 // }
