--- a/api/static/_splash.scss
+++ b/api/static/_splash.scss
@@ -28,10 +28,11 @@
 
 /* This is the main heading that appears on the gallery section */
 .splash-head {
-    font-size: 20px;
+    font-size: 21px;
+    font-family: 'Graduate', cursive;
     font-weight: bold;
     color: $dark-gray;
-    border: 3px solid black;
+    border: 3px solid $dark-gray;
     border-width: thick;
     padding: 1em 1.6em;
     font-weight: 100;
